--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ serde_derive = "1"
 serde_yaml = "0.7"
 ggez = "0.3"
 lazy_static = "0.2"
+rand = "0.3"
 
 [dependencies.yaml-merge-keys]
 version = "0.2"
