--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,19 @@
 name = "openm44"
 version = "0.1.0"
 authors = ["Aaron Power <theaaronepower@gmail.com>"]
+# edition = "2018"
+
+[profile.dev]
+opt-level = 2
 
 [dependencies]
 serde = "1"
 serde_derive = "1"
-serde_yaml = "0.7"
-ggez = "0.3"
-lazy_static = "0.2"
-rand = "0.3"
+serde_yaml = "0.8"
+ggez = "0.4"
+lazy_static = "1.3.0"
+rand = "0.6"
 
 [dependencies.yaml-merge-keys]
-version = "0.2"
+version = "0.3"
 features = ["serde_yaml"]
